# export_template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  export_template-config.cmake  export_template.sln
build_rules/: Xt_Build_Instances.cs  cuda_workaround.targets  xt_inst_gen.targets
props/: global.props  xt_user_template.props
src/: CMakeLists.txt
src/xt_inst_gen/: CMakeLists.txt  xt.h  xt_comp.cpp  xt_filt.cpp  xt_inst_file.h  xt_inst_gen.vcxproj  xt_inst_gen.vcxproj.filters  xt_link.cpp  xt_main.cpp  xt_util.h
test/: clean_xtis.bat  full_clean_one.bat  run_one.bat  test_all.bat
test/cuda/: A.cu  A.h  A_main.cpp  B.cu  B.h  CMakeLists.txt
test/diamond/: A.cpp  A.h  A1.cpp  A1.h  A_main.cpp  B.cpp  B.h  C.cpp  C.h  CMakeLists.txt  D.cpp  D.h  D1.cpp  D1.h
test/dll/: A_main.cpp  B.cpp  B.h  B_loader.cpp  C.cpp  C.h  CMakeLists.txt  D.cpp  D.h  E.cpp  E.h  E1.cpp  E1.h
test/ping_pong/: CMakeLists.txt  ping.cpp  ping.h  ping_pong.cpp  pong.cpp  pong.h
